frontend/test/should_pass/retype_019.grg
using attrib_model_001;

rule r {
	z:Node;
	iterated {
		x:Node;
		optional {
			u:Node;
			
			modify {
				y:NINT<x>;
			}
		}
		
		modify {
		}
	}
	
	modify {}
}

