frontend/test/should_fail/retype_027.grg
using attrib_model_001;

rule r {
	z:Node;
	iterated {
		x:Node;
		iterated {
			u:Node;
			
			modify {
				y:NINT<x>;
			}
		}
		
		modify {
		}
	}
	
	modify {}
}

